<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgNfts"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupAvatars"
        app:srcCompat="@drawable/miloverso_prev" />

    <Button
        android:id="@+id/btnComenzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="101dp"
        android:background="@drawable/btn_rounded"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:padding="7dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/comenzar"
        android:textColor="#F1EEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="24dp"
        android:text="@string/elige_un_nickname"
        app:layout_constraintBottom_toTopOf="@+id/txtNickname"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNfts" />

    <EditText
        android:id="@+id/txtNickname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_user"
        android:ems="10"
        android:hint="@string/ingrese_un_apodo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/btnComenzar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="16dp"
        android:text="ELIGE TU AVATAR"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupAvatars"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle3"
        android:layout_width="282dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="40dp"
        android:text="BIENVENIDO, PARA EMPEZAR DEBES ELEGIR UN AVATAR Y UN NICKNAME"
        app:layout_constraintBottom_toTopOf="@+id/txtTitle2"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupAvatars"
        android:layout_width="228dp"
        android:layout_height="149dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle2">

        <RadioButton
            android:id="@+id/optClonx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Clon X avatar" />

        <RadioButton
            android:id="@+id/optDgApeClub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Degen Ape Club avatar" />

        <RadioButton
            android:id="@+id/optMiloVerso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Miloverso avatar" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>