<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/txtNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/user" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="22dp"
        android:text="@string/bienvenido"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupEntrenadores"
        android:layout_width="263dp"
        android:layout_height="145dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/imgEntrenadorSeleccionado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/optAsh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="Ash Ketchum"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/optSonia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:minHeight="48dp"
            android:text="Sonia Daysutke"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:text="Elige un entrenador pokemon"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupEntrenadores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageView
        android:id="@+id/imgEntrenadorSeleccionado"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupEntrenadores"
        app:srcCompat="@drawable/user" />

    <Button
        android:id="@+id/btnConfirmarEntrenador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_rounded"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:padding="7dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="Confirmar"
        android:textColor="#F1EEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEntrenadorSeleccionado"
        app:layout_constraintVertical_bias="0.777" />

</androidx.constraintlayout.widget.ConstraintLayout>